# libfyjs

./: .gitignore  Makefile.am  README.md  configure.ac  libfyjs.pc.in
include/: libfyjs.h
src/: Makefile.am
src/lib/: fy-b64.c  fy-b64.h  fy-curl.c  fy-curl.h  fy-idn.c  fy-idn.h  fy-jsonschema.c  fy-jsonschema.h  fy-uri.c  fy-uri.h  numerics.h
src/simple-validate/: simple-validate.c
src/tool/: fyjs-testsuite.c  fyjs-tool.c  fyjs-tool.h  fyjs-validate.c
test/: .gitignore  Makefile.am  testsuite-dir.sh  testsuite-draft2019-09-optional-format.test  testsuite-draft2019-09-optional.test  testsuite-draft2019-09.test  testsuite-draft4-optional.test  testsuite-draft4.test  testsuite-draft6-optional.test  testsuite-draft6.test  testsuite-draft7-optional-format.test  testsuite-draft7-optional.test  testsuite-draft7.test  testsuite-optional-format.test  testsuite-optional.test  testsuite.test
